# nexyfab-desktop

./: .dockerignore  .env.example  .gitignore  .railwayignore  CHANGELOG.md  Dockerfile  NEXT_IMPROVEMENTS.md  RAILWAY_DEPLOY_GUIDE.md  README.md  apply_bento.py  ask_deepseek.py  ask_deepseek2.py  ask_deepseek_3d_review.py  build_log.txt  check_css.js  convert_pages.py  dedup_ko.js  deepseek_3d_review.md  deepseek_out.md  deepseek_out2.md  docker-compose.yml  eslint.config.mjs  fix-fonts.js  fix_case.py  fix_identity.py  fix_identity2.py  fix_identity3.py  fix_storytelling.py  json_to_sqlite.py  lint.txt  middleware.ts  next.config.ts  nexyfab.db-shm  nexyfab.db-wal  package-lock.json  package.json  peek.js  playwright.config.ts  process_data.js  railway.json  (+9 more)
adminlink/: .htaccess  index.php
data/: .db_migrated  material-prices-cache.json  material-prices-chart-cache.json
docs/: 3d-tools.md  current-status.md  customer-partner.md  database-migration.md  env-setup.md
e2e/: api-health.spec.ts  auth.spec.ts  commercial-release-smoke.spec.ts  landing.spec.ts  m3-assembly-load.spec.ts  m4-auto-drawing.spec.ts  m6-project-members-api.spec.ts  m6-team-members.spec.ts  responsive.spec.ts  shape-generator.spec.ts
public/: .htaccess  manifest.json  rss.xml  search.php  send-mail.php  sw.js
scripts/: backup-db.sh  backup.ts  commercial-checklists-bcd.mjs  commercial-gate-phase-a.mjs  commercial-phase-checklists.mjs  commercial-progress-through-d.mjs  (+35 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+1258 files in other folders)
