[package]
name = "nexyfab"
version = "0.1.0"
description = "NexyFab Desktop — 제조업 CAD/CAM 설계 툴"
authors = ["Nexysys"]
edition = "2021"

[lib]
name = "nexyfab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
